# my-rs-vercel-api

./: Cargo.toml  README.md  vercel.json
api/: [n].rs  main.rs
