[package]
name = "my-rust-vercel-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
vercel_runtime = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
num-bigint = "0.4.6"
num-traits = "0.2"

[[bin]]
name = "fibonacci"
path = "api/[n].rs"
